<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- Testo "Registrazione" -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_msg"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <!-- Layout dei campi di registrazione -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="143dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nome"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/hintNome"
                android:paddingLeft="15dp" />

            <EditText
                android:id="@+id/cognome"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/hintCognome"
                android:paddingLeft="15dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text_field_styling"
            android:hint="@string/hintEmail"
            android:paddingLeft="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:paddingLeft="15dp" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/hintConfirm"
                android:inputType="textPassword"
                android:paddingLeft="15dp" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:textFontWeight="700"
            android:text="@string/register_msg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="goToSignInAct"
            android:paddingLeft="15dp"
            android:text="@string/go_to_sign_in"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
