<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

  <ImageView
      android:id="@+id/logo"
      android:layout_width="100dp"
      android:layout_height="150dp"
      android:src="@drawable/background"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/textView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="120dp"
      android:layout_marginBottom="32dp"
      app:layout_constraintHorizontal_bias="0.5"/>

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Accedi"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.3" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      tools:layout_editor_absoluteX="0dp">


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/modified_input_text_field"
        android:hint="@string/hintEmail"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:padding="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/modified_input_text_field"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:paddingLeft="15dp" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        android:padding="18dp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/go_to_sign_up"
        android:textSize="18sp"
        android:onClick="goToSignUpAct"
        android:paddingLeft="15dp" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
